# raytracing

./: .gitignore  .rustfmt.toml  Cargo.toml  cubo.mtl  scene.toml  scene2.toml  scene3.toml
src/: auxiliar.rs  auxiliares.rs  camara.rs  camera.rs  escena.rs  geometria.rs  geometry.rs  integrator.rs  main.rs  material.rs  modelos.rs  models.rs  objetos.rs  parallel.rs  scene.rs  scene_config.rs
src/geometry/: aabb.rs  common.rs  mod.rs  ray.rs
src/integrators/: albedo.rs  auxiliar.rs  integrator.rs  mod.rs  normal.rs  random_walk.rs
src/shapes/: box_aabb.rs  common.rs  mod.rs  model.rs  model_obj.rs  shape.rs  sphere.rs  triangle.rs
src/spectrum/: data.rs  mod.rs
