[package]
name = "raytracing"
version = "0.2.0"
edition = "2021"

[profile.release]
#debug = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2 = "0.35"
wavefront_obj = "10.0"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
enum_dispatch = "0.3"
itertools = "0.11"
toml = "0.7"

[dependencies.image]
version = "0.24"
default-features = false
features = ["bmp"]

[dependencies.nalgebra]
version = "0.32"

